cmake_minimum_required(VERSION 3.10)

project(LibHTTP)

add_library(LibHTTP STATIC
	src/extern_md5.c
	src/extern_sha1.c
	src/extern_ssl_lut.c
	src/httplib_abort_start.c
	src/httplib_accept_new_connection.c
	src/httplib_addenv.c
	src/httplib_atomic_dec.c
	src/httplib_atomic_inc.c
	src/httplib_authorize.c
	src/httplib_base64_encode.c
	src/httplib_check_acl.c
	src/httplib_check_authorization.c
	src/httplib_check_feature.c
	src/httplib_check_password.c
	src/httplib_close_all_listening_sockets.c
	src/httplib_close_connection.c
	src/httplib_close_socket_gracefully.c
	src/httplib_closedir.c
	src/httplib_compare_dir_entries.c
	src/httplib_connect_client.c
	src/httplib_connect_socket.c
	src/httplib_connect_websocket_client.c
	src/httplib_construct_etag.c
	src/httplib_consume_socket.c
	src/httplib_create_client_context.c
	src/httplib_cry.c
	src/httplib_delete_file.c
	src/httplib_destroy_client_context.c
	src/httplib_difftimespec.c
	src/httplib_dir_scan_callback.c
	src/httplib_discard_unread_request_data.c
	src/httplib_download.c
	src/httplib_error_string.c
	src/httplib_event_queue.c
	src/httplib_fclose.c
	src/httplib_fclose_on_exec.c
	src/httplib_fgets.c
	src/httplib_fopen.c
	src/httplib_forward_body_data.c
	src/httplib_free_config_options.c
	src/httplib_free_context.c
	src/httplib_get_builtin_mime_type.c
	src/httplib_get_cookie.c
	src/httplib_get_debug_level.c
	src/httplib_get_first_ssl_listener_index.c
	src/httplib_get_header.c
	src/httplib_get_mime_type.c
	src/httplib_get_option.c
	src/httplib_get_random.c
	src/httplib_get_rel_url_at_current_server.c
	src/httplib_get_remote_ip.c
	src/httplib_get_request_handler.c
	src/httplib_get_request_info.c
	src/httplib_get_request_len.c
	src/httplib_get_response.c
	src/httplib_get_response_code_text.c
	src/httplib_get_server_ports.c
	src/httplib_get_system_name.c
	src/httplib_get_uri_type.c
	src/httplib_get_user_connection_data.c
	src/httplib_get_user_data.c
	src/httplib_get_var.c
	src/httplib_getreq.c
	src/httplib_global_data.c
	src/httplib_gmt_time_string.c
	src/httplib_gmtime_r.c
	src/httplib_handle_cgi_request.c
	src/httplib_handle_directory_request.c
	src/httplib_handle_file_based_request.c
	src/httplib_handle_form_request.c
	src/httplib_handle_not_modified_static_file_request.c
	src/httplib_handle_propfind.c
	src/httplib_handle_request.c
	src/httplib_handle_static_file_request.c
	src/httplib_handle_websocket_request.c
	src/httplib_header_has_option.c
	src/httplib_inet_pton.c
	src/httplib_init_options.c
	src/httplib_initialize_ssl.c
	src/httplib_interpret_uri.c
	src/httplib_is_authorized_for_put.c
	src/httplib_is_file_in_memory.c
	src/httplib_is_file_opened.c
	src/httplib_is_not_modified.c
	src/httplib_is_put_or_delete_method.c
	src/httplib_is_valid_http_method.c
	src/httplib_is_valid_port.c
	src/httplib_is_websocket_protocol.c
	src/httplib_kill.c
	src/httplib_load_dll.c
	src/httplib_localtime_r.c
	src/httplib_lock_unlock_connection.c
	src/httplib_lock_unlock_context.c
	src/httplib_log_access.c
	src/httplib_lowercase.c
	src/httplib_malloc.c
	src/httplib_master_thread.c
	src/httplib_match_prefix.c
	src/httplib_md5.c
	src/httplib_mkcol.c
	src/httplib_mkdir.c
	src/httplib_modify_passwords_file.c
	src/httplib_must_hide_file.c
	src/httplib_next_option.c
	src/httplib_open_auth_file.c
	src/httplib_opendir.c
	src/httplib_option_value_to_bool.c
	src/httplib_option_value_to_int.c
	src/httplib_parse_auth_header.c
	src/httplib_parse_date_string.c
	src/httplib_parse_http_headers.c
	src/httplib_parse_http_message.c
	src/httplib_parse_net.c
	src/httplib_parse_range_header.c
	src/httplib_path_to_unicode.c
	src/httplib_poll.c
	src/httplib_prepare_cgi_environment.c
	src/httplib_print_dir_entry.c
	src/httplib_printf.c
	src/httplib_process_new_connection.c
	src/httplib_process_options.c
	src/httplib_produce_socket.c
	src/httplib_pthread_cond_broadcast.c
	src/httplib_pthread_cond_destroy.c
	src/httplib_pthread_cond_init.c
	src/httplib_pthread_cond_signal.c
	src/httplib_pthread_cond_timedwait.c
	src/httplib_pthread_cond_wait.c
	src/httplib_pthread_getspecific.c
	src/httplib_pthread_join.c
	src/httplib_pthread_key_create.c
	src/httplib_pthread_key_delete.c
	src/httplib_pthread_mutex_destroy.c
	src/httplib_pthread_mutex_init.c
	src/httplib_pthread_mutex_lock.c
	src/httplib_pthread_mutex_trylock.c
	src/httplib_pthread_mutex_unlock.c
	src/httplib_pthread_self.c
	src/httplib_pthread_setspecific.c
	src/httplib_pull.c
	src/httplib_pull_all.c
	src/httplib_push_all.c
	src/httplib_put_dir.c
	src/httplib_put_file.c
	src/httplib_read.c
	src/httplib_read_auth_file.c
	src/httplib_read_request.c
	src/httplib_read_websocket.c
	src/httplib_readdir.c
	src/httplib_redirect_to_https_port.c
	src/httplib_refresh_trust.c
	src/httplib_remove.c
	src/httplib_remove_bad_file.c
	src/httplib_remove_directory.c
	src/httplib_remove_double_dots.c
	src/httplib_reset_per_request_attributes.c
	src/httplib_scan_directory.c
	src/httplib_send_authorization_request.c
	src/httplib_send_file.c
	src/httplib_send_file_data.c
	src/httplib_send_http_error.c
	src/httplib_send_no_cache_header.c
	src/httplib_send_options.c
	src/httplib_send_static_cache_header.c
	src/httplib_send_websocket_handshake.c
	src/httplib_set_acl_option.c
	src/httplib_set_auth_handler.c
	src/httplib_set_close_on_exec.c
	src/httplib_set_debug_level.c
	src/httplib_set_gpass_option.c
	src/httplib_set_handler_type.c
	src/httplib_set_non_blocking_mode.c
	src/httplib_set_ports_option.c
	src/httplib_set_request_handler.c
	src/httplib_set_sock_timeout.c
	src/httplib_set_ssl_option.c
	src/httplib_set_tcp_nodelay.c
	src/httplib_set_thread_name.c
	src/httplib_set_throttle.c
	src/httplib_set_uid_option.c
	src/httplib_set_user_connection_data.c
	src/httplib_set_websocket_handler.c
	src/httplib_should_decode_url.c
	src/httplib_should_keep_alive.c
	src/httplib_skip.c
	src/httplib_skip_quoted.c
	src/httplib_snprintf.c
	src/httplib_sockaddr_to_string.c
	src/httplib_spawn_process.c
	src/httplib_ssi.c
	src/httplib_ssl_error.c
	src/httplib_ssl_get_client_cert_info.c
	src/httplib_ssl_get_protocol.c
	src/httplib_ssl_id_callback.c
	src/httplib_ssl_locking_callback.c
	src/httplib_ssl_use_pem_file.c
	src/httplib_sslize.c
	src/httplib_start.c
	src/httplib_start_thread.c
	src/httplib_start_thread_with_id.c
	src/httplib_stat.c
	src/httplib_stop.c
	src/httplib_store_body.c
	src/httplib_strcasecmp.c
	src/httplib_strcasestr.c
	src/httplib_strdup.c
	src/httplib_strlcpy.c
	src/httplib_strncasecmp.c
	src/httplib_strndup.c
	src/httplib_substitute_index_file.c
	src/httplib_suggest_connection_header.c
	src/httplib_system_exit.c
	src/httplib_system_init.c
	src/httplib_timer.c
	src/httplib_tls_dtor.c
	src/httplib_uninitialize_ssl.c
	src/httplib_url_decode.c
	src/httplib_url_encode.c
	src/httplib_version.c
	src/httplib_vprintf.c
	src/httplib_vsnprintf.c
	src/httplib_websocket_client_thread.c
	src/httplib_websocket_client_write.c
	src/httplib_websocket_write.c
	src/httplib_websocket_write_exec.c
	src/httplib_worker_thread.c
	src/httplib_write.c
	src/lh_ipt_to_ip.c
	src/lh_ipt_to_ip4.c
	src/lh_ipt_to_ip6.c
	src/osx_clock_gettime.c
	src/win32_clock_gettime.c
	src/wince_rename.c
	src/wince_stat.c
	src/wince_strftime.c
	src/wince_time.c
)

target_include_directories(LibHTTP PRIVATE include)
